# cop3530_final_the_renderers

./: CMakeLists.txt  LICENSE  README.md  main.cpp  rasterization.cpp  rasterization.h  ray_tracing.cpp  ray_tracing.h  scene.cpp  scene.h  texture.h  triangle.cpp  triangle.h  window.cpp  window.h
